# huff2

./: Cargo.toml
.github/workflows/: ci.yml
ast/: Cargo.toml
ast/src/: lib.rs  parser.rs
crates/analysis/src/: lib.rs
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lexer.rs  parser.rs  util.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/comp/: Cargo.toml
crates/comp/src/: comp.rs  contract.rs  errors.rs  ir.rs  lib.rs  util.rs
crates/compilation/src/: lib.rs
